2011-05-06  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Improve PDF output.

	* demo/xml2doc/image_crop.cc: Cleanup temporary files.

	* demo/xml2doc/templates/pdf/line.xsl: Use paragraph
	information. Take color into account.

	* demo/xml2doc/templates/pdf/regions.xsl: Fix image localization.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Add hexadecimal color conversion routines.

	* tests/Makefile.am: Add subdir.

	* scribo/util/color_to_hex.hh,
	* scribo/util/hex_to_color.hh,
	* tests/util/Makefile.am,
	* tests/util/color_to_hex.cc,
	* tests/util/hex_to_color.cc: New.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Explicitly set vertical or horizontal attribute for separators in
	XML output.

	* demo/xml2doc/image_crop.cc,
	* demo/xml2doc/templates/pdf/regions.xsl: Handle new XML tags.

	* scribo/core/document.hh,
	* scribo/core/tag/component.hh,
	* scribo/io/img/internal/debug_img_visitor.hh,
	* scribo/io/img/internal/full_img_visitor.hh,
	* scribo/io/img/internal/non_text_img_visitor.hh,
	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh: Update enum
	declaration and handle new cases.

2011-05-05  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Make use of opacity in PDF output.

	* demo/xml2doc/image_crop.cc: Create opacity mask.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh: Add bbox
	information in region tag.

2011-05-04  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Small fixes in Scribo.

	* demo/xml2doc/image_crop.cc: Abort xml loading if an error
	is found.

	* scribo/core/line_info.hh: Fix text cleanup.

	* scribo/io/img/save.hh: Add documentation.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh: Use
	internal_gradient.

	* scribo/primitive/extract/alignments.hh: Set component type to
	whitespaceSeparator.

	* src/binarization/sauvola_ms_fg.cc: Fix argument use.
