@@ -1,5 +1,5 @@
-// Copyright (C) 2009, 2010 EPITA Research and Development Laboratory
-// (LRDE)
+// Copyright (C) 2009, 2010, 2011 EPITA Research and Development
+// Laboratory (LRDE)
 //
 // This file is part of Olena.
 //
@@ -64,7 +64,7 @@ namespace scribo
 	image2d<value::int_u8> t_sub;
 
 	unsigned n_nbhs;
-	util::array<int> dp;
+	mln::util::array<int> dp;
 
 	double K_;
 
